# draw

./: .gitignore  .stylish-haskell.yaml  CHANGELOG.md  README.md  draw.cabal  flake.nix  result
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
src/: Basic.hs  BasicSettings.hs  Bridged.hs  BrokenExample.hs  Buttons.hs  Menu.hs  MyGo.hs  MyLib.hs  Questions.hs  SharedFunctions.hs
